unpackaged/main/default/objects/ACG_Facility_Adjustment_Payment__c/ACG_Facility_Adjustment_Payment__c.object-meta.xml
<CustomObject>
    <label>Facility Adjustment Payment</label>
    <nameField>
        <displayFormat>FAP-{000}</displayFormat>
        <label>Facility Adjustment Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facility Adjustment Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>