unpackaged/main/default/objects/ACG_Facility_Adjustment_Payment__c/fields/ACG_Adjustment_ID__c.field-meta.xml
<CustomField>
    <fullName>ACG_Adjustment_ID__c</fullName>
    <label>Facility Adjustment ID</label>
    <referenceTo>ACG_Facility_Adjustment__c</referenceTo>
    <relationshipLabel>Facility Adjustment Payments</relationshipLabel>
    <relationshipName>Facility_Adjustment_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>