unpackaged/main/default/objects/ACG_Facility_Adjustment_Payment__c/fields/ACG_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>ACG_Payment_Amount__c</fullName>
    <label>Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>