unpackaged/main/default/objects/ACG_Facility_Adjustment_Payment__c/fields/ACG_Status__c.field-meta.xml
<CustomField>
    <fullName>ACG_Status__c</fullName>
    <description>Visible to System Admin only, read-only for all other users. Gets updated when Invoice.Status__c is updated. 

Implemented this way for Facility Adjustment object to reference as filter criteria for roll-up summary fields.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready for Processing</fullName>
            </value>
            <value>
                <fullName>Ready for Payment</fullName>
            </value>
            <value>
                <fullName>Submitted for Payment</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>