unpackaged/main/default/objects/ACG_Facility_Adjustment_Payment__c/fields/Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Type__c</fullName>
    <formula>TEXT(ACG_Adjustment_ID__r.ACG_Adjustment_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjustment Type</label>
    <type>Text</type>
</CustomField>