unpackaged/main/default/objects/ACG_Facility_Adjustment_Payment__c/fields/Facility_ID__c.field-meta.xml
<CustomField>
    <fullName>Facility_ID__c</fullName>
    <formula>ACG_Adjustment_ID__r.ACG_Facility_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility ID</label>
    <type>Text</type>
</CustomField>