unpackaged/main/default/objects/ACG_Facility_Adjustment_Payment__c/fields/Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_Name__c</fullName>
    <formula>ACG_Adjustment_ID__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility Name</label>
    <type>Text</type>
</CustomField>