unpackaged/main/default/objects/ACG_Facility_Adjustment_Payment__c/fields/Integration_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_Id__c</fullName>
    <externalId>true</externalId>
    <label>Integration Id</label>
    <length>75</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>