unpackaged/main/default/objects/ACG_Facility_Adjustment_Payment__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Facility Adjustment Payments</relationshipLabel>
    <relationshipName>Facility_Adjustment_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>