unpackaged/main/default/objects/ACG_Facility_Adjustment_Payment__c/fields/Statement__c.field-meta.xml
<CustomField>
    <fullName>Statement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>System Admin only field. Helps differentiate which FAP belongs to which Invoice in ACG_CreateFacilityAdjustments Apex class.</description>
    <label>Statement</label>
    <referenceTo>Statement__c</referenceTo>
    <relationshipLabel>Facility Adjustment Payments</relationshipLabel>
    <relationshipName>Facility_Adjustment_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>