unpackaged/main/default/objects/ACG_Facility_Adjustment_Payment__c/fields/X1099__c.field-meta.xml
<CustomField>
    <fullName>X1099__c</fullName>
    <formula>ACG_Adjustment_ID__r.ACG_Charge_1099__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1099</label>
    <type>Checkbox</type>
</CustomField>